@@ -291,6 +291,7 @@ tiberium-centrifuge-override=Override __1__ Outputs
 tiberium-centrifuge-alien-ores=Include Non-Nauvis Ores in Centrifuging
 tiberium-resource-inclusions=Include Specific Resources
 tiberium-resource-exclusions=Exclude Specific Resources
+tiberium-recipe-category-exclusions=Exclude Recipe Categories from Centrifuging Calculations
 tiberium-tier-zero=Add Burner Tier to Centrifuging
 tiberium-advanced-start=Tiberium Advanced Start
 tiberium-on-nauvis=[planet=nauvis] Enable Tiberium on Nauvis
@@ -323,8 +324,9 @@ tiberium-debug-text-startup=Logs additional information to factorio-current.log 
 # __1__ is replaced with a centrifuging noun phrase from [technology-name]
 tiberium-centrifuge-override=Advanced setting: replace the automatically generated __1__ recipe output with something you feel is more appropriate for your mod combination.\nEnter a delimited string of the items/fluids and amounts that should come from the recipe in the exact format "item1-internal-name:item1-amount,item2-internal-name:item2-amount" e.g. iron-ore:13,crude-oil:32\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to use the automatically generated __1__ recipe output
 tiberium-centrifuge-alien-ores=Whether to include ores and recipes from planets other than Nauvis in centrifuging recipe generation. Can result in warped or progression-breaking recipes.\nDefault: disabled
-tiberium-resource-inclusions=Advanced setting: list any items/fluids to be considered resources that should be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to only allow centrifuging and transmuting drillable/pumpjackable resources
-tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
+tiberium-resource-inclusions=Advanced setting: list any items/fluids to be considered resources that should be given by tiberium centrifuging or transmutation recipes.\nEnter a comma-delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to only allow centrifuging and transmuting drillable/pumpjackable resources
+tiberium-resource-exclusions=Advanced setting: list resources that should never be given by tiberium centrifuging or transmutation recipes.\nEnter a comma-delimited string of the items/fluids in the exact format "item1-internal-name,item2-internal-name" e.g. uranium-ore,crude-oil\nYou can find items' internal names by loading into a game, pressing F4 to open debug settings, enabling "show-debug-info-in-tooltips", and then mousing over the desired item and noting the "item-name" field. For fluids, mouse over them in FNEI or the un-barreling recipes.\nDefault: leave blank to allow centrifuging and transmuting all resources
+tiberium-recipe-category-exclusions=Advanced setting: list recipe categories that should be ingored when calculated the ingredients needed to create.\nEnter a comma-delimited string of the recipe categories in the exact format "recipe-category1,recipe-category2" e.g. recycling,pressing\nDefault: the centrifuging recipe script will try to exclude looping recipes or recipes that fabricate items out of thin air, but will sometimes get confused by mods with novel or complex recipe chains.
 tiberium-value=Scales how much raw material you get from a single piece of Tiberium ore. Higher values make the game easier.\nDefault: 10
 tiberium-enemies-take-environmental-damage=Will cause biters to take damage from walking near Tiberium Blossom Trees. Has historically caused UPS issues.\nDefault: disabled
 tiberium-pollution-multiplier=Scales how much extra pollution Tiberium refining and burning produces. Set to 1 to have Tiberium refining not produce more pollution than normal recipes.\nDefault:4
