@@ -183,10 +183,19 @@ data:extend{
 		auto_trim = true,
 		order = "d[direct]5",
 	},
-	--Centrifuging recipe settings
 	{
 		type = "string-setting",
 		name = "tiberium-resource-exclusions",
+		setting_type = "startup",
+		default_value = "",
+		allow_blank = true,
+		auto_trim = true,
+		order = "d[direct]6",
+	},
+	--Centrifuging recipe settings
+	{
+		type = "string-setting",
+		name = "tiberium-recipe-category-exclusions",
 		setting_type = "startup",
 		default_value = "",
 		allow_blank = true,
