@@ -8,6 +8,7 @@ Version: 2.0.11
   Features:
     - Added support for turning Tiberium into things other than items or fluids. Allows better compatibility with mods that rely on non-item prototypes or using settings to add recipes for things like tools (e.g. Tenemut), capsules (e.g. Jellynut), ammo (e.g. Piercing Rounds Magazine), etc
     - Added setting "Include Specific Resources" to allow users to flag any item as a valid output for centrifuging and to have transmutation recipes added for it. Note that adding intermediate ingredients as resources will typicall cause centrifuging recipes to rebalance to give the added resource instead of the original ores (e.g. if you add Steel Plate to this setting, you will see the Iron Ore centrifuging output decrease and be replaced with Steel Plates)
+    - Added setting "Exclude Recipe Categories from Centrifuging Calculations" to allow users to fine-tune centrifuging recipes and avoid game-breaking recipes from other without needing to wait for a patch
 ---------------------------------------------------------------------------------------------------
 Version: 2.0.10
   Bugfixes:
